--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Treadlite",
+  "name": "Treadlite -- Make less of an impact.",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
