new font and friends additions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     
-     "name": "phase-4-deploying-app-demo",
+     "name": "tread-lite",
     
      "description": "Build scripts for Heroku",
     
