--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-date-picker": "^8.3.6",
@@ -18,8 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-window": "^1.8.6",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.2"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
@@ -46,3 +42,4 @@
     ]
   }
 }
+
