--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,6 +4,6 @@
   "icons": [],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF"
+  "theme_color": "#f7f5ee",
+  "background_color": "#f7f5ee"
 }
