--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.2",
     "react-window": "^1.8.6",
     "styled-components": "^5.3.3"
   },
@@ -42,4 +43,3 @@
     ]
   }
 }
-
