--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,6 @@
   "icons": [],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f7f5ee",
+  "theme_color": "#098a5a",
   "background_color": "#f7f5ee"
 }
