--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
-  "name": "tread-lite",
-  "description": "Build scripts for Heroku",
-  "engines": {
-    "node": "16.x"
-  },
-  "scripts": {
-    "clean": "rm -rf public",
-    "build": "npm install --prefix client && npm run build --prefix client",
-    "deploy": "cp -a client/build/. public/",
-    "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
-  }
+    
+     "name": "tread-lite",
+    
+     "description": "Build scripts for Heroku",
+    
+     "engines": {
+    
+         
+     "node": "16.x"
+    
+     },
+    
+     "scripts": {
+    
+         
+     "clean": "rm -rf public",
+    
+         
+     "build": "npm install --prefix client && npm run build --prefix client",
+    
+         
+     "deploy": "cp -a client/build/. public/",
+    
+         
+     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+    
+     },
+    
+     "dependencies": {
+
+    
+     }
 }
