--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
   "name": "treadlite",
-  "version": "1.0.0",
-  "description": "Treadlite aims to bring awareness to peoples' carbon footprint, using a complex and comprehensive scoring method.",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
+  "description": "Build scripts for Heroku",
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elijahms/treadlite.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/elijahms/treadlite/issues"
-  },
-  "homepage": "https://github.com/elijahms/treadlite#readme"
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "clean": "rm -rf public",
+    "deploy": "cp -a client/build/. public/",
+    "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+  }
 }
