--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,10 @@
     "@mui/material": "^5.2.5",
     "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
-    "react-date-picker": "^8.3.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "react-spring": "^9.4.2",
-    "react-window": "^1.8.6",
-    "styled-components": "^5.3.3"
+    "react-spring": "^9.4.2"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
